--- a/331-intro-to-vite/package.json
+++ b/331-intro-to-vite/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "331-intro-to-vite",
   "version": "0.0.0",
@@ -38,5 +39,6 @@
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vue-tsc": "^2.0.21"
+    "axios": "^1.7.2"
   }
 }
