--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -38,7 +39,6 @@
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
-    "vue-tsc": "^2.0.21"
-    "axios": "^1.7.2"
+    "vue-tsc": "^2.0.21"    
   }
 }
